WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.9-rc1, 2012-09-17


Version 0.3.9 (under dev!)
--------------------------

* core: add signals for plugins loaded/unloaded
* core: add default key alt+"x" (zoom on merged buffer) (task #11029)
* core: fix display bug when end of a line is displayed on top of chat (last
  line truncated and MORE(0) in status bar) (bug #37203)
* core: fix IP address returned by hook_connect (return IP really used, not
  first IP for hostname)
* core: display spaces at the end of messages in chat area (bug #37024)
* core: fix infinite loop in display when chat area has width of 1 with
  a bar displayed on the right (nicklist by default) (bug #37089)
* core: fix display of "bar more down" char when text is truncated by size_max
  in bars with vertical filling (bug #37054)
* core: fix color of long lines (displayed on more than one line on screen)
  under FreeBSD (bug #36999)
* core: add mouse bindings ctrl+wheel up/down to scroll horizontally buffers
  with free content
* core: return error string to callback of hook_connect if getaddrinfo fails in
  child process
* core: add option weechat.startup.sys_rlimit to set system resource limits for
  WeeChat process
* core: add option "swap" for command /buffer (task #11373)
* core: fix names of cache variables in configure.in (bug #36971)
* core: scroll to bottom of window after reaching first or last highlight with
  keys alt+"p" / alt+"n"
* core: add hdata "hotlist"
* core: add support of arrays in hdata variables
* core: add command line option "-r" (or "--run-command") to run command(s)
  after startup of WeeChat
* core: fix refresh of bar items when switching window
* core: fix refresh of bar items "buffer_filter" and "scroll" in root bars
  (bug #36816)
* core: add function "hook_set" in plugin API, add "subplugin" in hooks (set by
  script plugins), display subplugin in /help on commands (task #12049)