@@ -19,10 +19,6 @@
 # along with WeeChat.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-if(COMMAND cmake_policy)
-  cmake_policy(SET CMP0003 NEW)
-endif(COMMAND cmake_policy)
-
 SET(WEECHAT_CURSES_SRC
 gui-curses.h
 gui-curses-bar-window.c
