@@ -7,6 +7,8 @@ v0.3.9-rc1, 2012-09-17
 Version 0.3.9 (under dev!)
 --------------------------
 
+* core: move the set of cmake policy CMP0003 in directory src (so it applies to
+  all plugins) (bug #37311)
 * core: add signals for plugins loaded/unloaded
 * core: add default key alt+"x" (zoom on merged buffer) (task #11029)
 * core: fix display bug when end of a line is displayed on top of chat (last
